--- a/TipoCambioInflacion.Rmd
+++ b/TipoCambioInflacion.Rmd
@@ -72,5 +72,5 @@ En el primer trimestre del 2023, la inflación general mantuvo la tendencia a la
 Durante el segundo trimestre del 2023 se acentuó la reducción de la inflación general, lo que llevó a que se ubicara por debajo del límite inferior del rango de tolerancia al final de este periodo. A finales de junio, la inflación general, se ubicó en -1,0%.
 Para el cuarto trimestre del 2023, al igual que en el previo, la inflación general interanual fue negativa (deflación. En diciembre del 2023, la inflación general se ubicó en -1,8%. Según el Informe de Política Monetaria de Enero del 2024, la reducción de la inflación, con valores negativos desde junio del 2023, ha estado determinada, en mayor medida, por la reversión de los choques de oferta externos y la política monetaria restrictiva.
 
-
+En cuanto a las expectativas para el año 2024, se espera un repunte gradual en la inflación en Costa Rica, aunque se mantendría dentro de los objetivos establecidos por el Banco Central. Este repunte se atribuye en gran medida al comportamiento de las materias primas importadas. Se proyecta que la inflación alcance alrededor del 1,9% (interanual) para ese año, marcando una salida del periodo de deflación en el que se encuentra actualmente. Sin embargo, el momento exacto en que se dará este cambio aún no está determinado. A pesar de este repunte, el país podría cerrar el año nuevamente fuera del rango objetivo del Banco Central, según proyecciones de la OCDE. Se espera que, para el año siguiente, 2025, la inflación regrese al rango objetivo, ubicándose en torno al 3,1%, reflejando una mejora en las condiciones económicas que podría generar presiones inflacionarias internas.
 
