--- a/Informe Contexto Económico.Rmd
+++ b/Informe Contexto Económico.Rmd
@@ -39,6 +39,46 @@ library(scales)
 ```
 
 # Inflación
+
+```{r}
+Inflacion <- read.csv2("Inflacion.csv")
+Inflacion$Fecha <- as.Date(Inflacion$Fecha, format = "%d/%m/%Y")
+```
+
+```{r}
+ggplot(Inflacion, aes(x = Fecha)) +
+  geom_line(aes(y = `Variacion.mensual....`, color = "Variación Mensual"),size = 1) +
+  geom_line(aes(y = `Variacion.interanual....`, color = "Variación Interanual"),size = 1) +
+  geom_line(aes(y = `Variacion.acumulada.....n3`, color = "Variación Acumulada"),size = 1) +
+  scale_color_manual(values = c("Variación Mensual" = "#2F4F4F", "Variación Interanual" = "#BCEE68", "Variación Acumulada" = "cadetblue3")) +
+  labs(title = "Inflación",
+       subtitle = "Ene 2022 a Dic 2023",
+       x = "Fecha",
+       y = "Variación",
+       color = "Tipo de Variación",
+       caption = expression(bold("Fuente: ") * "Elaboración propia a partir de datos del BCCR.")) +
+  theme_minimal()+
+  scale_y_continuous(labels = scales::percent_format(scale = 1), breaks = seq(-4, 13, by = 1))+
+  geom_hline(yintercept = 2, linetype = "dashed", color = "black")+
+  geom_hline(yintercept = 4, linetype = "dashed", color = "black")+
+  scale_x_date(date_labels = "%b-%Y", date_breaks = "2 month")+
+  theme(axis.text.x = element_text(angle = 45, hjust = 1),
+        legend.position = "bottom",
+        plot.caption.position = "plot",
+        plot.caption = element_text(hjust = 0),
+        plot.title = element_text(hjust = 0.5),
+        plot.subtitle = element_text(hjust = 0.5))
+```
+
+En enero de 2022, el país experimentó una inflación interanual del 3.50%. A lo largo del año, este índice se mantuvo por encima del límite superior de la meta inflacionaria establecida por el Banco Central de Costa Rica (3%, ±1 p.p.), con la excepción del mes de enero. El valor más alto se registró en agosto, alcanzando un 12.13%, seguido de una desaceleración en los cuatro meses siguientes, donde en diciembre se registró una inflación interanual de 7.88%. La inflación importada fue la principal causa del aumento de esta variable, lo que provocó un alza en los precios de los alimentos y los derivados del petróleo. La situación geopolítica, particularmente la Guerra entre Rusia y Ucrania, contribuyó a estas presiones inflacionarias, aunque se observó un freno en ellas a partir del mes de agosto, coincidiendo con una disminución en el tipo de cambio.
+
+En el primer trimestre del 2023, la inflación general mantuvo la tendencia a la baja iniciada en septiembre del 2022. Luego de alcanzar una tasa de variación máxima en agosto del 2022, retrocedió de manera sostenida hasta ubicarse en marzo del 2023 en 4,4%. Según el Informe de Política Monetaria de abril del 2023, el comportamiento de la inflación en el primer trimestre del presente año es explicado en mayor medida por los precios de los bienes, cuyos aumentos interanuales se moderaron con respecto a los trimestres previos.
+
+Durante el segundo trimestre del 2023 se acentuó la reducción de la inflación general, lo que llevó a que se ubicara por debajo del límite inferior del rango de tolerancia al final de este periodo. A finales de junio, la inflación general, se ubicó en -1,0%.
+Para el cuarto trimestre del 2023, al igual que en el previo, la inflación general interanual fue negativa (deflación. En diciembre del 2023, la inflación general se ubicó en -1,8%. Según el Informe de Política Monetaria de Enero del 2024, la reducción de la inflación, con valores negativos desde junio del 2023, ha estado determinada, en mayor medida, por la reversión de los choques de oferta externos y la política monetaria restrictiva.
+
+En cuanto a las expectativas para el año 2024, se espera un repunte gradual en la inflación en Costa Rica, aunque se mantendría dentro de los objetivos establecidos por el Banco Central. Este repunte se atribuye en gran medida al comportamiento de las materias primas importadas. Se proyecta que la inflación alcance alrededor del 1,9% (interanual) para ese año, marcando una salida del periodo de deflación en el que se encuentra actualmente. Sin embargo, el momento exacto en que se dará este cambio aún no está determinado. A pesar de este repunte, el país podría cerrar el año nuevamente fuera del rango objetivo del Banco Central, según proyecciones de la OCDE. Se espera que, para el año siguiente, 2025, la inflación regrese al rango objetivo, ubicándose en torno al 3,1%, reflejando una mejora en las condiciones económicas que podría generar presiones inflacionarias internas.
+
 # Tasas de interés experimentadas y esperadas
 ## Tasas de interés experimentadas
 ## Tasas de interés esperadas
@@ -128,7 +168,39 @@ El informe indica que la tendencia a la baja del salario real en el 2022 se debe
 # Déficit fiscal
 # Tipo de cambio
 
+```{r}
+TipoCambio1 <- read.csv2("TipoCambio1.csv")
+TipoCambio1 <- TipoCambio1[, -c(4:10)]
+TipoCambio1$Fecha <- as.Date(TipoCambio1$Fecha, format = "%d/%m/%Y")
+```
 
+```{r}
+ggplot(TipoCambio1, aes(x = Fecha)) +
+  geom_line(aes(y = TIPO.CAMBIO.COMPRA, color = "Compra")) +
+  geom_line(aes(y = TIPO.DE.CAMBIO.VENTA, color = "Venta")) +
+  scale_color_manual(values = c("Compra" = "#2F4F4F", "Venta" = "cadetblue3")) +
+  labs(x = "Fecha", 
+       y = "Tipo de Cambio (colones)",
+       title = "Tipo de cambio del dólar de los Estados Unidos de América", 
+       subtitle = "Ene 2022 a Dic 2023",
+       color = "Tipo de Cambio",
+       caption = expression(bold("Fuente: ") * "Elaboración propia a partir de datos del BCCR."))+
+  scale_y_continuous(limits = c(500, 700),  # Establece los límites del eje y
+                     breaks = seq(500, 700, by = 20))+
+   scale_x_date(date_labels = "%b-%Y", date_breaks = "2 month")+
+  theme(axis.text.x = element_text(angle = 45, hjust = 1),
+        legend.position = "bottom",
+        plot.caption.position = "plot",
+        plot.caption = element_text(hjust = 0),
+        plot.title = element_text(hjust = 0.5),
+        plot.subtitle = element_text(hjust = 0.5))
+```
+
+En diciembre de 2022, el tipo de cambio cerró con una tasa de compra de $₡594/US\$$ y una tasa de venta de $₡601/US\$$. Estas cifras fueron notablemente más bajas en comparación con los niveles observados a lo largo del año, el cual estuvo caracterizado por una alta volatilidad en esta variable. Durante el año, el tipo de cambio experimentó una apreciación del 7%. Inicialmente, el tipo de cambio mostró una tendencia al alza en los primeros meses, alcanzando su punto más alto a mediados del año, sin embargo, experimentó un alto en el segundo semestre tras el anuncio por parte del Banco Central de Costa Rica (BCCR) de una serie de medidas destinadas a controlar esta tendencia. Como resultado, en el segundo semestre del año, el tipo de cambio comenzó a descender. Entre las medidas adoptadas por el BCCR para contrarrestar el alza en el tipo de cambio se encuentran la emisión de instrumentos financieros en dólares, la reducción del horario de negociación del MONEX y el otorgamiento de un préstamo de $1 000 millones al Fondo Latinoamérica de Reservas (FLAR) con el fin de fortalecer las reservas del país.
+
+Durante el 2023, el tipo de cambio en Costa Rica se promedió en ₡544,5/US$, alcanzando un nivel de precios que no se había visto desde el año 2016. Este valor incluso superó la cifra registrada hace 14 años, en 2009. Según análisis realizados, la devaluación de la moneda alcanzó el 12% a lo largo del año, con un promedio de compra del dólar de 542 colones y venta de 548 colones. Este exceso de oferta de dólares se atribuye principalmente al aumento en la llegada de turistas al país, que alcanzó los 2,75 millones de visitantes extranjeros hasta septiembre de 2023, según datos del Instituto Costarricense de Turismo, y al crecimiento en la Inversión Extranjera Directa (IED), que registró un incremento del 16% hasta septiembre del 2023, representando la llegada al país de 2.691 millones de dólares, según el Ministerio de Comercio Exterior. Ante la posibilidad de una baja más pronunciada en el valor del dólar, el Banco Central intervino en el mercado mediante la compra de divisas en Monex, con el fin de satisfacer la demanda del sector público no financiero y aumentar las reservas monetarias internacionales.
+
+Para el año 2024, los analistas financieros proyectan una intervención cambiaria más cautelosa por parte del Banco Central, limitada a situaciones de sobreoferta de dólares. La expectativa de una inflación del 2% sugiere una estabilidad en el tipo de cambio. No se prevén eventos en Costa Rica que puedan ejercer presiones significativas al alza sobre el tipo de cambio, lo que lleva a proyecciones de un tipo de cambio estable. Además, la próxima recepción de $1 mil millones en Eurobonos también se considera en estas previsiones.
 
 
 
