--- a/Tasas experimentadas y esperadas.Rmd
+++ b/Tasas experimentadas y esperadas.Rmd
@@ -25,25 +25,52 @@ TPM_experimentadas <- TPM_experimentadas %>% gather(Año, Tasa, "2022":"2023" )
 
 # Tasas de interés experimentadas
 
-Se analizan las tasas básicas pasivas y las tasas de política monetaria mensuales del 2022 y del 2023 calculadas por el Banco Central de Costa Rica (BCCR). Las primeras corresponden a las tasas de interés del mercado.
+Se analiza el comportamiento de  la  tasa básica  pasiva (TBP) y la tasa de política monetaria (TPM) mensuales del 2022 y del 2023 calculadas por el Banco Central de Costa Rica (BCCR). La primera corresponde a la tasa de interés del mercado. Las segunda, es la tasa objetivo del BCCR que se emplea como referencia para regular el costo de las operaciones crediticias y del sistema financiero. Es definida por la Junta Directiva del Banco Central. 
+
 En el siguiente gráfico se muestra el comportamiento de estas tasas.
 
 
 ```{r, echo=FALSE}
-  Tasas_experimentadas_plot <- ggplot() + 
-  geom_line(aes(x = 1:24, y = TBP_experimentadas$Tasa, color = "Tasa Básica Pasiva"), lwd = 1)+      
-  geom_line(aes(x = 1:24, y = TPM_experimentadas$Tasa, color = "Tasa de Política Monetaria"), lwd = 1)+
-  scale_color_manual(values = c("Tasa Básica Pasiva" =  "#7AC5CD", "Tasa de Política Monetaria" =    "#A2CD5A"))+
-  labs(title = "Tasa Básica Pasiva y de Política Monetaria en Costa Rica, 2022-2023", x = "Años", y = "Tasa (%)", color = "")+
-  scale_x_continuous(breaks = c(1, 12, 24), labels = c("2022", "2022/2023", "2023"))+ theme_minimal()
+ Tasas_experimentadas_plot <- ggplot() + 
+  geom_line(aes(x = 1:24, y = TBP_experimentadas$Tasa, color = "Tasa Básica Pasiva"), lwd = 1) +      
+  geom_line(aes(x = 1:24, y = TPM_experimentadas$Tasa, color = "Tasa de Política Monetaria"), lwd = 1) +
+  labs(title = "Tasa Básica Pasiva y de Política Monetaria en Costa Rica",
+       subtitle = "2022-2023",
+       x = "Años", 
+       y = "Tasa (%)",
+       color = "") +
+  theme_minimal()+
+  scale_color_manual(values = c("Tasa Básica Pasiva" =  "#2F4F4F", "Tasa de Política Monetaria" = "cadetblue3")) +
+  scale_x_continuous(breaks = c(1, 12, 24), labels = c("2022", "2022/2023", "2023")) +
+  theme(legend.position = "bottom",
+        plot.title = element_text(hjust = 0.5),
+        plot.subtitle = element_text(hjust = 0.5),
+        plot.caption = element_text(hjust = 0, color = "black", size = 8),
+        legend.title = element_blank()) +
+  labs(caption = "Fuente: Elaborado con datos del BCCR.")
+
 Tasas_experimentadas_plot
+
 ```
+# Tasas de interés experimentadas
 
-En los primeros 4 meses del 2022 la tasa básica pasiva experimentó un leve decrecimiento.Para 
-el resto del año tuvo una gran subida, pasando de una tasa de 2.90% en abril a una de 6.35% en diciembre. Sin embargo, este comportamiento solo se mantuvo hasta enero del 2023. En los meses posteriores, la tasa básica pasiva mostró una tendencia a la baja presentando en diciembre una tasa de 5.36%. 
-Aunque, en el 2023 la tasa básica pasiva sufrió decrecimientos, las tasas experimentadas en este periodo siguen siendo superiores a las presentadas a inicios del 2022.
+La tasa de política monetaria en el 2022 presentó un comportamiento al alza, iniciando con un 1.75%  y en los últimos tres meses del año las tasas fueron constantes, especificamente de 9%. Esto se debe a las presiones inflacionarias sufridas en el 2021 ,por lo que, con el fin de contrarrestar la tendencia al crecimiento de la inflación y alcanzar la neutralidad en la política monetaria, el BCCR realizó ocho ajustes al alza de la TPM durante ese año. Esto ocasionó incrementos en la tasa básica pasiva  donde, en los primeros 4 meses del 2022 dicha tasa experimentó un leve decrecimiento pero para el resto del año tuvo una gran subida, pasando de una tasa de 2.90% en abril a una de 6.35% en diciembre.
 
-En cuanto a las tasa de política monetaria, en el 2022 se presentó un comportamiento al alza y en los últimos tres meses del año las tasas fueron constantes, especificamente de 9%. Sin embargo,sucede lo opuesto para el 2023, donde se mostró una tendencia a la baja, pasando de una tasa de 9% a inicio del año a una de 6% al final de este.
+Sin embargo, la decisión de elevar la TPM fue motivo de críticas hacia el BCCR debido al incremento de las tasas de interés que encarecieron las transacciones del mercado y el consumo nacional. Por lo tanto, a partir de marzo del 2023 el BCCR empezó a bajar la TPM. Según la Junta Directiva del BCCR, estas reducciones se basan en el comportamiento de la inflación y su evolución,  que para ese año presentó bajos niveles incluso mostró una inflación interanual negativa. Por lo cual, en el 2023 se mostró una tendencia a la baja, pasando de una tasa de 9% en los dos primeros meses del año a una de 6% al final de este. Como consecuencia, incidió en la baja de la TBP donde, se inició con una tasa de 6.52% en enero y cerró con una de 5.36% en diciembre.
 
-En general, las tasas de política monetaria experimentadas en ambos años fueron superiores a las tasas básicas pasivas. Además, el 2022 significó un año de crecimiento para ambas tasas las cuales recayeron en el año siguiente.
+En general, las tasas de política monetaria fueron superiores a las tasas básicas pasivas
+durante el 2022 y el 2023. Y, a pesar de que en el 2023 se comenzó con la reducción de ambas tasas, están fueron superiores a las presentados a inicios del 2022. Esto se debe a que el proceso de reducción ejecutado por la Junta Directiva del Banco Central fue más cauteloso.
+
+## Tasas de interés esperadas
+
+Las expectativas sobre las tasas de interés se encuentran principalemente sujetas a las evoluciones previstas de la inflación. Dado que, se prevee que la inflación se siga manteniendo por debajo de la meta objetivo establecido por el BCCR (3%) se espera que para el 2024 el Banco Central mantenga una política monetaria menos restrictiva y por ende, realice ajustes sobre la TPM para que tienda a la baja y reducirla  alrededor del 4.5% a finales del año. Consecuentemente, se prevee una reducción de la TBP. Lo mismo se espera para el 2025, donde se proyecta que la tasa de política monetaria disminuya en 150 puntos básicos a finales de ese año, de acuerdo con con la OCDE.
+
+Aunado a lo anterior, se ha estado ejerciciendo presión de parte del sector comercial para que el BCCR continue disminuyendo las tasas. Por lo que, se espera que para el 2024 el BCCR acate ante las solicitudes de este sector y a la vez, incentive una mayor actividad comercial, competitividad e inversiones. 
+
+Tomando en cuenta la influencia del contexto internacional, se prevee para el 2024 una estabilización de la inflación internacional cerca de las metas de los bancos centrales incentivando a la disminución de las tasas de política monetaria. Por consiguiente,según el Banco Nacional, se considera que Estados Unidos suavice su política monetaria en el 2024, de tal manera, es posible que durante el año el BCCR  reduzca gradualmente la TPM y consigo la tasa básica pasiva. No obstante, aunque se esperan pocas presiones inflacionarias el BCCR enfrenta limitadas oportunidades para continuar disminuyendo la tasa de política monetaria. El motivo de esto son las altas tasas internacionales que ya han advertido las autoridades moneterias, las cuales pueden acotar los efectos de la política monetaria en una economía en crecimiento como la de Costa Rica.
+
+Además, de acuerdo con la opinión de economistas de la Universidad Nacional, el Banco Central mantiene bajas las tasas de interés como una estrategia para eludir la salida o entrada de dólares de la economía que afecten el tipo de cambio. Por lo tanto, ante una situación de aumento de las tasas internacionales, de la deuda externa y un exceso de dólares, se espera que para el 2024 el BCCR realice cambios moderados para ajustar la inflación en valores cercanos a la meta  establecida con el objetivo de encontrar estabilidad en los precios y las tasas. 
+
+
+
 
